# src/main/kotlin/com/heerkirov/animation/model/result/StatisticsRes.kt
@@ -91,13 +91,16 @@ data class TimelineOverviewRes(@JsonProperty("begin_year") val beginYear: Int?,
 data class TimelineRes(@JsonProperty("items") val items: List<Item>,
                        @JsonProperty("update_time") val updateTime: String?) {
     data class Item(@JsonProperty("time") val time: String,
-                    @JsonProperty("watched_animations") val watchedAnimations: Int,
+                    @JsonProperty("chase_animations") val chaseAnimations: Int,
+                    @JsonProperty("chase_episodes") val chaseEpisodes: Int,
+                    @JsonProperty("chase_duration") val chaseDuration: Int,
+                    @JsonProperty("supplement_animations") val supplementAnimations: Int,
+                    @JsonProperty("supplement_episodes") val supplementEpisodes: Int,
+                    @JsonProperty("supplement_duration") val supplementDuration: Int,
                     @JsonProperty("rewatched_animations") val rewatchedAnimations: Int,
-                    @JsonProperty("watched_episodes") val watchedEpisodes: Int,
                     @JsonProperty("rewatched_episodes") val rewatchedEpisodes: Int,
-                    @JsonProperty("scatter_episodes") val scatterEpisodes: Int,
-                    @JsonProperty("watched_duration") val watchedDuration: Int,
                     @JsonProperty("rewatched_duration") val rewatchedDuration: Int,
+                    @JsonProperty("scatter_episodes") val scatterEpisodes: Int,
                     @JsonProperty("scatter_duration") val scatterDuration: Int,
                     @JsonProperty("max_score") val maxScore: Int?,
                     @JsonProperty("min_score") val minScore: Int?,
@@ -108,7 +111,8 @@ data class TimelineRes(@JsonProperty("items") val items: List<Item>,
 data class HistoryLineRes(@JsonProperty("items") val items: List<Item>,
                           @JsonProperty("update_time") val updateTime: String) {
     data class Item(@JsonProperty("time") val time: String,
-                    @JsonProperty("total_animations") val totalAnimations: Int,
+                    @JsonProperty("chase_animations") val chaseAnimations: Int,
+                    @JsonProperty("supplement_animations") val supplementAnimations: Int,
                     @JsonProperty("max_score") val maxScore: Int?,
                     @JsonProperty("min_score") val minScore: Int?,
                     @JsonProperty("avg_score") val avgScore: Double?,
